tests/typechecker/should_fail/datatype_incomplete_field.csp
datatype A = B.Bool

datatype X = Y.{B}
